Mar 25, 2024
  added sanitation of gene symbols and names for all species
    (characters with ASCII code > 127 are removed from gene symbols and names)

Feb 13, 2024
  renamed 'master' to 'main'

Jan 29, 2024
  updated to java 17

Sep 28, 2023
  added reporting of phenotypic allelic variants with same names

Aug 30, 2023
  added computation of TAGLESS_ALLELE_SYMBOL for gene alleles

Aug 24, 2023
  added computation of TAGLESS_STRAIN_SYMBOL for strains

Aug 07, 2023
  renamed to 'data-qc-pipeline'

Jan 11, 2023
  updated build.gradle to be gradle 6.x + compatible

Nov 02, 2022
  added qc of RRRC IDs for strains

Jul 19, 2022
  added reporting of orphan terms in ontologies maintained by RGD

Jun 14, 2022
  tuned up logging

Mar 29, 2022
  added reporting of gene alleles with same symbols / names

2021-12-22
  updated log4j to avoid zero day exploit

2021-03-10
  added transcript qc: creates NCBI nucleotide xdb ids for the transcripts missing them

2020-04-16
  added reporting of duplicate hgnc ids
  revamped logging
  
2020-04-06
-discontinued logging of details of qtls with inactive markers in the main summary email

2020-01-30
-updated oracle.jar dependency (remote repo discontinued, must use local jar file)

2020-01-27
-annotation QC: improved summary of fixing new lines in annotation notes

2019-12-04
-added qc for gene aliases that are the same as gene symbols/names
 (such redundant aliases are deleted and logged into deleted_aliases.log)

2019-10-17
-added qc for related qtls missing reference associations

v.1.2.7, 2019-05-13
-inactive objects QC: added reporting of active qtls with inactive markers

v.1.2.6, 2019-04-18
-annotation QC: added reporting of annotations with inactive references

v.1.2.5, 2019-01-28
-fixed logging

v.1.2.4, 2019-01-08
-annotation QC: added reporting of CC manual annotations that have invalid MMO: ids

v.1.2.3, 2018-12-07
-annotation QC: added reporting and removal of obsolete ND annotations for GO ontology, per RGDD-1529
